# nemotron-ops-commander

./: .env.example  .gitignore  DEMO_GUIDE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.py
agents/: __init__.py  base_agent.py  incident_triager.py  log_analyzer.py  optimizer.py  orchestrator.py  remediation_suggester.py
api/: main.py
benchmarks/: GTC_2026_Submission_Package.md  GTC_Executive_Summary.md  LIVE_BENCHMARK_RESULTS.md  comparison.md  latency_test.py  llm_embedding_comparison.md  throughput_test.py
config/: prompts.yaml  settings.py
huggingface_space/: README.md  agents.py  app.py  inference.py  rag_engine.py  requirements.txt  schemas.py
k8s/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
knowledge_connectors/: circuit_breaker.py  cloud_docs_connector.py  github_public_issues.py  ingestion.py  k8s_docs_connector.py  stackoverflow_connector.py
models/: nemotron_client.py  schemas.py  sglang_backend.py
nemops_local_ollama/: .env.example  .gitignore  README.md  pyproject.toml
nemops_local_ollama/configs/: agent_config.yaml
nemops_local_ollama/docs/: architecture.md
nemops_local_ollama/src/nemops/: __init__.py  agent.py  llm.py  mcp_server.py
nemops_local_ollama/src/nemops/data/: incidents.json  seed_incidents.py
nemops_local_ollama/src/nemops/tools/: __init__.py  alert_gen.py  diagnostics.py  gpu_health.py  incident_rag.py
nemops_local_ollama/tests/: test_agent.py  test_mcp.py  test_tools.py
nemops_local_ollama/ui/: dashboard.py
observability/: logging.py  metrics.py  tracing.py
(+53 files in other folders)
