[project]
name = "nemops"
version = "0.1.0"
description = "Agentic GPU Infrastructure Monitor powered by NVIDIA Nemotron 3 Nano"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Harsh Bajaj", email = "harsh.rocks@hotmail.com"}
]
keywords = ["nemotron", "gpu", "monitoring", "agent", "mcp", "ollama"]

dependencies = [
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "streamlit>=1.38.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
]
gpu = [
    "pynvml>=12.0.0",
]

[project.scripts]
nemops = "nemops.agent:main"
nemops-mcp = "nemops.mcp_server:main"
nemops-seed = "nemops.data.seed_incidents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nemops"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
